Closed
Bug 1240193
Opened 9 years ago
Closed 8 years ago
Convert test_auth_dialog_permission.js to use asyncOpen2
Categories
(Core :: DOM: Security, defect)
Core
DOM: Security
Tracking
()
RESOLVED
FIXED
mozilla50
Tracking | Status | |
---|---|---|
firefox50 | --- | fixed |
People
(Reporter: ckerschb, Assigned: ckerschb)
References
Details
(Whiteboard: [domsecurity-active])
Attachments
(2 files)
4.93 KB,
patch
|
dragana
:
review+
|
Details | Diff | Splinter Review |
3.23 KB,
patch
|
tanvi
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Updated•9 years ago
|
Assignee | ||
Comment 1•9 years ago
|
||
Hey Dragana, just converting the test to use asyncOpen2. When doing so, mixed-content-blocker kicks in and would block requests, hence I had to change the schemes from https to http, which should be fine for the test, right?
Attachment #8708591 -
Flags: review?(dd.mozilla)
Updated•9 years ago
|
Attachment #8708591 -
Flags: review?(dd.mozilla) → review+
Assignee | ||
Updated•9 years ago
|
Whiteboard: [domsecurity-active]
Assignee | ||
Comment 2•9 years ago
|
||
Tanvi, this is the last netwerk unit test we have to convert to use asyncOpen2(), then we could close Bug 1193558. I think it might still take some time till we have converted docshell (TYPE_DOCUMENT loads) to rely on asyncOpen2() and I don't want to hold back patches (like this one) that is ready to land.
Within Bug 1105556 [1] you added a hidden preference so we can skip assertions for TYPE_DOCUMENT loads created through JS. I would like to apply the same hidden pref trick for that test so we can get this patch landed and out of the way. What do you think?
Please note that within the contentsecuritymanager we could in fact remove the assertion, because contentpolicies bail out early for TYPE_DOCUMENT loads anyway, but I would like to keep the assertion so no one accidentaly calls asyncOpen2() for a TYPE_DOCUMENT load, hence I would rather just bypass the assertion for that specific test.
[1] https://hg.mozilla.org/mozilla-central/rev/5f8bcba5c5e0
Attachment #8754283 -
Flags: review?(tanvi)
Updated•8 years ago
|
Attachment #8754283 -
Flags: review?(tanvi) → review+
Pushed by mozilla@christophkerschbaumer.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/3883d00c447e
Skip TYPE_DOCUMENT assertions for loads initiated by JS tests (r=tanvi)
https://hg.mozilla.org/integration/mozilla-inbound/rev/9727e102e54b
Convert test_auth_dialog_permission.js to use asyncOpen2 (r=dragana)
Comment 4•8 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/3883d00c447e
https://hg.mozilla.org/mozilla-central/rev/9727e102e54b
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•